<resources>
    <string name="app_name">ZagelX</string>
    <string name="sign_out">Sign Out</string>
    <string name="prompt_age">age</string>
    <string name="prompt_gender">Choose Gender</string>
    <string name="prompt_type">Choose Type</string>
    <string name="prompt_location">Choose Type</string>
    <string name="prompt_birthday">Choose Day of Birth</string>
    <string name="action_sign_in">Or Sign in here!</string>
    <string name="action_sign_up">Or Sign up here!</string>
    <string name="action_sign_in_button">Sign In</string>
    <string name="action_sign_up_button">Sign Up</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="nav_orders">الشحنات الجديدة</string>
    <string name="nav_trips">Trips</string>
    <string name="nav_profile">حسابك الشخصي</string>
    <string name="nav_notify">الاشعارات</string>
    <string name="nav_settings">Account Settings</string>
    <string name="nav_about_us">عن زاجل</string>
    <string name="nav_terms">الشروط و الاحكام</string>
    <string name="nav_logout">تسجيل الخروج</string>
    <string name="nav_dashboard_orders">التحكم في شحناتك</string>
    <string name="nav_dashboard_trips">التحكم في رحلاتك</string>
    <string name="nav_eWallet">النقديات</string>
    <string name="nav_insideOrders">شحناتك داخل المحافظة</string>
    <string name="nav_outsideOrders">شحناتك خارج المحافظة</string>
    <string name="nav_pm_inside_orders">الشحنات داخل المحافظة</string>
    <string name="nav_pm_outside_orders">الشحنات خارج المحافظة</string>
    <string name="nav_pm_incoming_trips">الرحلات الواردة</string>
    <string name="nav_pm_outgoing_trips">الرحلات الصادرة</string>
    <string name="yalla">Yalla</string>
    <string name="prompt_weight">Estimated Weight</string>
    <string name="trip_price">Trip Price</string>
    <string name="max_no_orders">اقصي عدد شحنات في هذه الرحلة</string>
    <string name="is_prepaid">Pre-Paid trip?</string>
    <string name="trip_vehicle_lable">Trip Vehicle:</string>
    <string name="trip_notes">Trips Notes</string>
    <string name="delivery_date_label">Delivery Date</string>
    <string name="maximum_prepaid_price">الحد الاقصي للدفع المقدم للشحنة الواحدة</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be at least 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="type_array">
        <item>Merchant</item>       
        <item>Delivery Delegate</item> 
        <item>Zagel Team</item>
    </string-array>
    <string-array name="zagel_team_array">
        <item>Alex PM</item>    
        <item>Alex Static Birds</item>  
        <item>Cairo PM</item>   
        <item>Cairo Static Birds</item> 
    </string-array>
    <string-array name="AR_location_array">
        <item>الإسكندرية</item>
        <item>القاهرة</item>
        <item>الجيزة</item>























        
    </string-array>
    <string-array name="En_location_array">
        <item>Alexandria</item>
        <item>Cairo</item>

























    </string-array>
    <string-array name="الغربية">
        <item>مركز طنطا</item>
        <item>مركز المحلة الكبرى</item>
        <item>مركز كفر الزيات</item>
        <item>مركز زفتى</item>
        <item>مركز السنطة</item>
        <item>مركز قطور</item>
        <item>مركز بسيون</item>
        <item>مركز سمنود</item>
    </string-array>
    <string-array name="الشرقية">
        <item>مركز الزقازيق</item>
        <item>مركز منيا القمح</item>
        <item>مركز بلبيس</item>
        <item>مركز مشتول السوق</item>
        <item>مركز أبو حماد</item>
        <item>مركز ههيا</item>
        <item>مركز أبو كبير</item>
        <item>مركز فاقوس</item>
        <item>مركز الإبراهيمية</item>
        <item>مركز ديرب نجم</item>
        <item>مركز كفر صقر</item>
        <item>مركز أولاد صقر</item>
        <item>مركز الحسينية</item>
    </string-array>
    <string-array name="كفر_الشيخ">
        <item>مركز كفر الشيخ</item>
        <item>مركز دسوق</item>
        <item>مركز فوه</item>
        <item>مركز مطوبس</item>
        <item>مركز البرلس</item>
        <item>مركز الحامول</item>
        <item>مركز بيلا</item>
        <item>مركز الرياض</item>
        <item>مركز سيدي سالم</item>
        <item>مركز قلين</item>
    </string-array>
    <string-array name="الدقهلية">
        <item>مركز المنصورة</item>
        <item>مركز طلخا</item>
        <item>مركز ميت غمر</item>
        <item>مركز دكرنس</item>
        <item>مركز أجا</item>
        <item>مركز منية النصر</item>
        <item>مركز السنبلاوين</item>
        <item>مركز بني عبيد</item>
        <item>مركز المنزلة</item>
        <item>مركز تمي الأمديد</item>
        <item>مركز الجمالية</item>
        <item>مركز شربين</item>
        <item>مركز المطرية</item>
        <item>مركز بلقاس</item>
        <item>مركز ميت سلسيل</item>
        <item>مركز محلة دمنة</item>
        <item>مركز نبروه</item>
    </string-array>
    <string-array name="بني_سويف">
        <item>مركز بني سويف</item>
        <item>مركز الواسطى</item>
        <item>مركز ناصر</item>
        <item>مركز إهناسيا</item>
        <item>مركز ببا</item>
        <item>مركز سمسطا</item>
        <item>مركز الفشن</item>
    </string-array>
    <string-array name="المنوفية">
        <item>مركز شبين الكوم</item>
        <item>مركز السادات</item>
        <item>مركز منوف</item>
        <item>مركز أشمون</item>
        <item>مركز الباجور</item>
        <item>مركز قويسنا</item>
        <item>مركز بركة السبع</item>
        <item>مركز تلا</item>
        <item>مركز الشهداء</item>
    </string-array>
    <string-array name="الإسماعيلية">
        <item>مركز الإسماعيلية</item>
        <item>مركز فايد</item>
        <item>مركز القنطرة شرق</item>
        <item>مركز القنطرة غرب</item>
        <item>مركز التل الكبير</item>
        <item>مركز أبو صوير</item>
        <item>مركز القصاصين</item>
    </string-array>
    <string-array name="بورسعيد">
        <item>الشرق</item>
        <item>الجنوب</item>
        <item>بورفؤاد</item>
        <item>الضواحي</item>
        <item>المناخ</item>
        <item>الزهور</item>
        <item>العرب</item>
    </string-array>
    <string-array name="السويس">
        <item>السويس</item>
        <item>الأربعين</item>
        <item>عتاقة</item>
        <item>الجناين</item>
    </string-array>
    <string-array name="أسوان">
        <item>مركز أسوان</item>
        <item>مركز دراو</item>
        <item>مركز كوم أمبو</item>
        <item>مركز نصر النوبة</item>
        <item>مركز إدفو</item>
    </string-array>
    <string-array name="أسيوط">
        <item>مركز أسيوط</item>
        <item>مركز ديروط</item>
        <item>مركز منفلوط</item>
        <item>مركز القوصية</item>
        <item>مركز أبنوب</item>
        <item>مركز أبو تيج</item>
        <item>مركز الغنايم</item>
        <item>مركز ساحل سليم</item>
        <item>مركز البداري</item>
        <item>مركز صدفا</item>
        <item>مركز الفتح</item>
    </string-array>
    <string-array name="البحر_الأحمر">
        <item> 	الغردقة</item>
        <item>سفاجا</item>
        <item>مرسى علم</item>
        <item>القصير</item>
        <item>رأس غارب</item>
        <item>شلاتين</item>
    </string-array>
    <string-array name="البحيرة">
        <item>مركز دمنهور</item>
        <item>مركز كفر الدوار</item>
        <item>مركز رشيد</item>
        <item>مركز إدكو</item>
        <item>مركز أبو المطامير</item>
        <item>مركز أبو حمص</item>
        <item>مركز الدلنجات</item>
        <item>مركز المحمودية</item>
        <item>مركز الرحمانية</item>
        <item>مركز إيتاي البارود</item>
        <item>مركز حوش عيسى</item>
        <item>مركز شبراخيت</item>
        <item>مركز كوم حمادة</item>
        <item>مركز بدر</item>
        <item>مركز وادي النطرون</item>
    </string-array>
    <string-array name="جنوب_سيناء">
        <item>أبو رديس</item>
        <item>أبو زنيمة</item>
        <item>نويبع</item>
        <item>دهب</item>
        <item>رأس سدر</item>
        <item>شرم الشيخ</item>
        <item>سانت كاترين</item>
        <item>طور سيناء</item>
    </string-array>
    <string-array name="الجيزة">
        <item>مركز البدرشين</item>
        <item>مركز الصف</item>
        <item>مركز أطفيح</item>
        <item>مركز العياط</item>
        <item>مركز الواحات البحرية</item>
        <item>مركز منشأة القناطر</item>
        <item>مركز أوسيم</item>
        <item>مركز كرداسة</item>
        <item>مركز أبو النمرس</item>
    </string-array>
    <string-array name="دمياط">
        <item>مركز دمياط</item>
        <item>مركز فارسكور</item>
        <item>مركز كفر سعد</item>
        <item>مركز الزرقا</item>
        <item>مركز كفر البطيخ</item>
    </string-array>
    <string-array name="سوهاج">
        <item>مركز سوهاج</item>
        <item>مركز أخميم</item>
        <item>مركز البلينا</item>
        <item>مركز المراغة</item>
        <item>مركز المنشأة</item>
        <item>مركز دار السلام</item>
        <item>مركز جرجا</item>
        <item>مركز جهينة</item>
        <item>مركز ساقلته</item>
        <item>مركز طما</item>
        <item>مركز طهطا</item>
        <item>مركز العسيرات</item>
    </string-array>
    <string-array name="الفيوم">
        <item>مركز الفيوم</item>
        <item>مركز طامية</item>
        <item>مركز سنورس</item>
        <item>مركز إطسا</item>
        <item>مركز إبشواي</item>
        <item>مركز يوسف الصديق</item>
    </string-array>
    <string-array name="الأقصر">
        <item>مركز الزينية</item>
        <item>مركز البياضية</item>
        <item>مركز القرنة</item>
        <item>مركز أرمنت</item>
        <item>مركز الطود</item>
        <item>مركز إسنا</item>
    </string-array>
</resources>